--- a/css/style.sass
+++ b/css/style.sass
@@ -1,21 +1,29 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Raleway)")
+@import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700|Raleway:300,400,600')
 @import "montserrat/stylesheet.css"
 
 $gris-4: #000A0F
 $gris-3: #424242
 $gris-2: #6d6d6d
-$gris-1: #efefef
-$celeste-2: #c4f1f9
+$gris-1: #f5f5f5
+$celeste-3: #0088a3
+$celeste-2: #00b8d4
+$celeste-1: #62ebff
+
 $main-font: "Montserrat Light", sans-serif
 $bold-font: "Montserrat Bold", sans-serif
+$alt-font: "Open Sans Condensed", "Montserrat", sans-serif
+$alt-font-2: "Raleway", "Montserrat", sans-serif
+
+$img-categorias: "../images/pintura.jpg", "../images/ilustraciones.jpg", "../images/escultura.jpg", "../images/fotografia.jpg", "../images/joyeria.jpg"
 
 *
   box-sizing: border-box
 
 body
-  background-color: $gris-1
-  font-size: 10px
   font-family: $main-font
+  font-size: 10px
+  color: $gris-4
+
 
 b, strong
   font-family: $bold-font
@@ -24,25 +32,28 @@ a
   text-decoration: none
 
 ol, ul
-  list-style: none
   margin: 0
   padding: 0
+  list-style: none
 
 img
   width: 100%
 
+h1, h2, h3, h4
+  text-align: center
 
-/* HEADER */
+
+// HEADER
 
 .main-header
+  position: fixed
   width: 100vw
   top: 0
   padding: 2em
-  position: fixed
-  background-color: #fff
   overflow: hidden
   display: flex
   justify-content: space-between
+  background-color: #fff
   z-index: 9
 
 h1
@@ -54,13 +65,13 @@ h1
   display: none
 
 #open-nav:checked ~ .main-nav
-  display: block
-  width: 100vw
   float: left
+  width: 100vw
+  display: block
 
 .toggle-nav
-  color: $gris-4
   font-size: 3em
+  color: $gris-4
   cursor: pointer
 
 h1
@@ -68,6 +79,9 @@ h1
 
 .ion-search
   @extend .toggle-nav
+
+
+// MENÚ DESPLEGABLE
 
 .close-nav
   @extend .toggle-nav
@@ -82,9 +96,9 @@ h1
   color: #fff!important
 
 .registro
-  color: #fff
-  font-size: 1.5em
   padding: 1em
+  font-size: 1.5em
+  color: #fff
 
 .main-nav
   position: fixed
@@ -93,30 +107,26 @@ h1
   width: 0
   height: 100vh
   padding-top: 2em
-  background-color: $gris-4
   overflow: hidden
+  background-color: $gris-4
   transition: 350ms
   z-index: 10
 
   ul
-    clear: both
     margin: 3em 0
+    clear: both
 
   ul a
-    display: block
     padding: 1em
-    color: #fff
+    display: block
     font-size: 1.5em
-    text-align: left
     text-transform: uppercase
+    text-align: left
+    color: #fff
     border-bottom: solid 1px #fff
 
 
-/* CONTAINER */
-
-.main-container
-  margin-top: 7em
-
+// INTRO
 
 .intro
   height: 100vh
@@ -127,12 +137,12 @@ h1
 .intro-layover
   position: relative
   height: 100vh
-  background-color: rgba(0,0,0,0.65)
+  background-color: rgba(0,0,0,0.6)
   color: #fff
 
 .intro-center
   position: absolute
-  top: 30%
+  top: 40%
   left: 50%
   margin-left: -35vw
   width: 70vw
@@ -140,32 +150,145 @@ h1
 
   form input[type=text]
     width: 100%
+    padding: 0.5em
     text-align: center
     font-family: $main-font
-    padding: 0.5em
     font-size: 1.5em
+    border: 1px solid $gris-1
+    box-shadow: 0px
 
 h2
-  font-size: 2.5em
-  text-shadow: 2px 2px 0px $gris-4
-  z-index: 100000
   margin: inherit auto
+  font-size: 2.5em
+  letter-spacing: 2px
+  line-height: 1.5em
+  text-shadow: 2px 2px 0px darken($celeste-3, 20%), 4px 4px 0px $gris-4
+  z-index: 100000
 
   span
     text-transform: uppercase
-    font-style: italic
-    text-shadow: 2px 2px 0px $gris-4
     font-size: 1.2em
+    letter-spacing: normal
 
 
+// QUÉ ES MANDY
+
+.about
+  padding: 2em
+  background-color: darken($gris-3, 30%)
+  font-size: 2em
+  text-align: center
+  line-height: 1.5em
+  color: #fff
+
+  p
+    padding: 0 1.2em 1.2em 0
+    border-right: 2px solid #fff
+    border-bottom: 2px solid #fff
+
+    span
+      text-transform: uppercase
+      text-shadow: 2px 2px 0px #000, 3px 3px 0px darken($celeste-3, 10%)
+      font-weight: 600
 
 
-.product
-  margin: 15px 0
-  padding: 0 15px
+// TÍTULOS DE SECCIÓN
+
+.section-title
+  margin-bottom: 30px
+  text-align: center
+
+  img
+    width: 50px
+
+  p
+    margin: 1em 1em 0
+    font-size: 1.5em
+    line-height: 1.5em
+
+h3
+  margin: 0
+  padding: 40px 0 30px
+  font-size: 3em
+
+
+// SECCIONES
+
+.main-container
+  margin-bottom: 40px
+
+.seccion
+  padding-bottom: 40px
+
+.ver-mas
+  margin-top: 40px
+  padding: 1em 2em
+  font-family: $alt-font-2
+  font-size: 1.5em
+  font-weight: 700
+  text-transform: uppercase
+  letter-spacing: 1px
+  color: $celeste-2
+  background-color: transparent
+  border: 2px solid $celeste-2
+  display: inline-block
+  cursor: pointer
+
+
+// SECCIÓN: CATEGORÍAS
+
+.categoria
+  width: 100vw
+  height: 200px
+  overflow: hidden
+
+.imagen-categoria
+  width: 50%
+  height: 200px
+  background-size: cover
+
+h4
+  z-index: 5
+  width: 50%
+  height: 100%
+  font-size: 2.5em
+  margin-top: 0px
+  font-family: $alt-font
+  text-transform: uppercase
+  letter-spacing: 2px
+  background-color: $gris-1
+  background-image: url('../images/pattern2.png')
+  background-blend-mode: luminosity
+  text-shadow: 2px 2px 0px #fff
+  padding: 85px 0
+  color: #000
+
+
+@for $i from 1 through length($img-categorias)
+  .categoria:nth-child(#{$i + 1}) .imagen-categoria
+    background-image: url(nth($img-categorias, $i))
+    @if $i % 2 == 0
+      float: left
+    @else
+      float: right
+
+
+.categoria:nth-child(even) h4
+  float: left
+
+.categoria:nth-child(odd) h4
+  float: right
+
+
+  // ARTISTAS DESTACADOS
+
+.artistas-destacados
+  background-color: $gris-1
+
+/* FOOTER */
 
 .main-footer
-  background-color: red
+  background-color: $gris-4
   border-radius: 10px 10px 0 0
 
 .main-footer a
