--- a/css/style.sass
+++ b/css/style.sass
@@ -666,10 +666,10 @@ h6
   height: auto
   padding: 10px
 
-.abrir-pregunta:checked ~ .question .ion-plus
+.abrir-pregunta:checked ~ .pregunta .ion-plus
   display: none
 
-.abrir-pregunta:checked ~ .question .ion-minus
+.abrir-pregunta:checked ~ .pregunta .ion-minus
   display: inline
 
 
