--- a/css/style.css
+++ b/css/style.css
@@ -578,10 +578,10 @@ h6 {
   height: auto;
   padding: 10px; }
 
-.abrir-pregunta:checked ~ .question .ion-plus {
+.abrir-pregunta:checked ~ .pregunta .ion-plus {
   display: none; }
 
-.abrir-pregunta:checked ~ .question .ion-minus {
+.abrir-pregunta:checked ~ .pregunta .ion-minus {
   display: inline; }
 
 @media(min-width: 600px) {
