--- a/css/style.sass
+++ b/css/style.sass
@@ -73,7 +73,7 @@ form input[type=submit]:hover
   width: 100vw
   top: 0
   padding: 2em
-  overflow: hidden
+  overflow: visible
   display: flex
   justify-content: space-between
   align-items: center
@@ -85,6 +85,7 @@ h1
   padding: 0
   text-transform: uppercase
   transition: 350ms
+  order: 0
 
 h1:hover
   text-shadow: $sombras-fondo-claro
@@ -122,9 +123,10 @@ h1:hover
   font-size: 3em
   color: $gris-4
   cursor: pointer
+  transition: 150ms
 
 .toggle-nav:hover, .top-search:hover, .close-nav:hover, .shopping-bag:hover
-  color: $celeste-2!important
+  color: $celeste-3!important
 
 
 // MENÚ DESPLEGABLE
@@ -139,23 +141,47 @@ h1:hover
   margin-right: 0.5em
   color: #fff!important
 
+.user-avatar
+  overflow: hidden
+  display: flex
+  align-items: center
+  justify-content: center
+  border: 1px solid $gris-1
+  box-shadow: 1px 0px 0px $gris-1
 
-.registro-mobile
+.links-mobile
+  margin-top: 8em
   margin-left: 2em
   display: flex
   align-items: center
+  justify-content: center
+  clear: both
 
-.registro-mobile a
-  display: inline-block
-  font-size: 1.5em
-  color: #fff
+  a
+    display: inline-block
+    font-size: 1.5em
+    color: #fff
 
   u
     display: block
     margin: 5px 0 0
 
   u:hover
-    color: $celeste-2
+    color: $celeste-3
+
+  .user-avatar
+    height: 60px
+    width: 60px
+    border-radius: 30px
+    margin-right: 20px
+
+  .user-display
+    font-size: 2em
+    line-height: 1.3em
+    display: block
+
+    a
+      font-size: 1em
 
 .log-in-mobile
   background-color: $celeste-2
@@ -179,12 +205,13 @@ h1:hover
   padding-top: 2em
   overflow: hidden
   background-color: $gris-4
+  color: #fff!important
   transition: 350ms
   z-index: 10
+  order: 2
 
   ul
-    margin: 5em 0 3em
-    position: relative
+    margin: 3em 0 3em
 
   ul a
     padding: 1em
@@ -200,7 +227,7 @@ h1:hover
 
   ul li:hover a
     padding-left: 2em
-    background-color: $celeste-2
+    background-color: $celeste-3
     text-shadow: 1px 1px 0px $gris-3
     transition: 350ms
 
@@ -244,6 +271,7 @@ h1:hover
 
   form input[type=submit]:hover
     background-color: $celeste-3
+    text-shadow: 1px 1px 0px $gris-3
 
 .main-container h2
   margin: inherit auto
@@ -339,7 +367,9 @@ section.fondo-gris
   transition: 350ms
 
 .ver-mas:hover
-  background-color: $celeste-2
+  background-color: $celeste-3
+  text-shadow: 1px 1px 0px $gris-3
+  border-color: $celeste-3
   color: #fff
   transition: 350ms
 
@@ -521,7 +551,7 @@ h6
 
   form input[type=submit]:hover
     background-color: $celeste-3
-
+    text-shadow: 1px 1px 0px $gris-3
 
 // LOG-IN Y REGISTRO
 
@@ -628,6 +658,11 @@ h6
     cursor: pointer
     display: block
 
+  button:hover
+    background-color: $celeste-3
+    text-shadow: 1px 1px 0px $gris-3
+    transition: 150ms
+
   .img_profile + label
     font-size: 1em
     display: inline-block
@@ -640,6 +675,9 @@ h6
     background-color: #000
     font-size: 1.2em!important
     margin-top: 10px
+
+  .boton-registrate:hover
+    background-color: $gris-3!important
 
   .boton-registrarme
     margin-top: 50px
@@ -764,6 +802,11 @@ a.boton-modificar, button.boton-modificar
   cursor: pointer
   display: inline-block
 
+a.boton-modificar:hover, button.boton-modificar:hover
+  background-color: $celeste-3
+  text-shadow: 1px 1px 0px $gris-3
+  transition: 150ms
+
 a.boton-imagen
   font-size: 1em
   display: inline-block
@@ -771,6 +814,10 @@ a.boton-imagen
   margin: 10px 0
   padding: 12px
   background-color: $gris-3!important
+  transition: 350ms
+
+a.boton-imagen:hover
+  background-color: $gris-4!important
 
 
 @media(min-width: 600px)
@@ -826,10 +873,10 @@ a.boton-imagen
   .shopping-bag, .sb-desktop
     display: inline-block
 
-  .toggle-nav, .close-nav, .registro-mobile, .sb-mobile
+  .toggle-nav, .close-nav, .links-mobile, .sb-mobile
     display: none
 
-  .registro-desktop a, .shopping-bag, .top-search
+  .shopping-bag, .top-search
     color: $gris-4!important
 
   .icon-nav
@@ -838,20 +885,18 @@ a.boton-imagen
     display: flex
     justify-content: space-between
     align-items: center
+    order: 3
 
   #open-search:checked ~ .top-searchbar
     display: block
     float: left
     width: 50%
     order: 1
-    z-index: -1
+    z-index: 3
 
   #open-search:checked ~ .links-desktop,
   #open-search:checked ~ .shopping-bag
     display: none
-
-  .links-desktop
-    font-size: 1.5em
 
   .main-nav
     position: static
@@ -884,23 +929,66 @@ a.boton-imagen
       padding-left: 1em
       background-color: transparent
 
-  .top-search
-    order: 1
-    margin: 0 20px
-
-  .shopping-bag
-    order: 2
+    ul li:nth-child(6)
+      display: none
 
   .links-desktop
-    display: inline-block
+    position: relative
+    display: inline-flex
+    align-items: center
+    justify-content: space-between
+    font-size: 1.5em
     width: auto
     order: 1
+    transition: 150ms
 
     a
-      color: $celeste-3
+      color: $celeste-2
 
-    a:last-child
+    a.log-in-desktop
       color: #fff!important
+
+    .user-avatar
+      height: 32px
+      width: 32px
+      border-radius: 16px
+      margin-right: 10px
+      display: inline-flex
+      z-index: 2
+
+  .user-display
+    z-index: 2
+    background-color: #fff
+
+  .links-desktop:hover .user-menu,
+  .user-menu:hover .user-menu
+    height: 120px
+
+  .user-menu
+    height: 0
+    top: 0
+    position: absolute
+    padding-top: 40px
+    overflow: hidden
+    width: 100%
+    color: $gris-4!important
+    transition: 180ms ease-in
+    transform-origin: left top
+    z-index: 1
+
+    li
+      background-color: #fff
+      border-bottom: 1px solid $gris-1
+
+    li a
+      display: block
+      padding: 10px 20px
+      color: $gris-4!important
+      transition: color 150ms
+
+    li a:hover
+      text-decoration: none
+      color: $celeste-3!important
 
   .log-in-desktop
     padding: 5px 10px
@@ -910,6 +998,15 @@ a.boton-imagen
   .links-desktop a:hover
     text-decoration: underline
 
+  .top-search
+    margin: 0 20px
+    order: 2
+
+  .shopping-bag
+    order: 3
+
+
+  // SECCIONES
 
   .about
     padding: 100px 200px
@@ -975,6 +1072,3 @@ a.boton-imagen
     width: 60%
     text-align: left
     float: right
-
-  .clearfix
-    clear: both
