--- a/css/style.sass
+++ b/css/style.sass
@@ -450,6 +450,7 @@ h4:hover
   letter-spacing: 1px
   background-color: $celeste-3
   color: #fff
+  background-color: 20
 
 
 .artista h5
@@ -818,6 +819,15 @@ a.boton-imagen
 
 a.boton-imagen:hover
   background-color: $gris-4!important
+
+// BASE DE DATOS
+
+.bdResult
+  font-size: 2em
+  margin-top: 50px
+  font-weight: 600
+  color: $celeste-2
+
 
 
 @media(min-width: 600px)
